add_subdirectory(test_wxwidget)
add_subdirectory(test_sampler)
add_subdirectory(test_transform)
add_subdirectory(test_camera)
add_subdirectory(test_ray_intersect)
add_subdirectory(test_intersection_gl)
add_subdirectory(test_render_target)
add_subdirectory(test_bsdf)
add_subdirectory(test_wx_app)
add_subdirectory(test_tbb)